--- a/templates/base.html
+++ b/templates/base.html
@@ -58,10 +58,10 @@
    <div class="mobileportraitview">
        <div class="banner-WNDR">
            <div class="home_page_banner">
-               <img src="{% static 'image/banner_img.jpg' %}" class="banner-img-bg" alt="banner-img">
+               <!-- <img src="{% static 'image/banner_img.jpg' %}" class="banner-img-bg" alt="banner-img"> 
                <img src="{% static 'image/banner_img-tabs.jpg' %}" class="banner-img-bg-tabs" alt="banner-img1">
-               <img src="{% static 'image/banner_img-mobile.jpg' %}" class="banner-img-bg-mobile" alt="banner-img2">
-           </div>
+               <img src="{% static 'image/banner_img-mobile.jpg' %}" class="banner-img-bg-mobile" alt="banner-img2">---->
+           </div> 
            <!-- image/banner_img.jpg' -->
            <div class="banner_video_section">
                <video class="banner_desktop_video" id="video2" width="100%" height="100%" preload='none'
