--- a/templates/home.html
+++ b/templates/home.html
@@ -327,7 +327,7 @@
 								 <div class="bnnr_img desktop_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
 									{% comment %} src="{% static 'image/game-player.jpg' %}" {% endcomment %}
-									 <img src="{% static 'image/game-player.jpg' %}" id="play_button" class="desk_poster"/> 
+									 <img src="{% static 'image/game-player.jpeg' %}" id="play_button" class="desk_poster"/> 
 								</div> 
 								<div class="bnnr_img mbl_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
