--- a/templates/base.html
+++ b/templates/base.html
@@ -1169,7 +1169,30 @@
  
  
            </script> -->
- 
+
+    <script type="text/javascript">
+
+document.onselectstart=function(){
+if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
+return false;
+}
+else {
+return true;
+}
+};
+if (window.sidebar) {
+document.onmousedown=function(e){
+var obj=e.target;
+if (obj.tagName.toUpperCase() == "INPUT" || obj.tagName.toUpperCase() == "TEXTAREA" || obj.tagName.toUpperCase() == "PASSWORD") {
+return true;
+}
+else {
+return false;
+}
+};
+}
+</script>
+
  
        </div>
    </div>
