remove disable copy

--- a/templates/base.html
+++ b/templates/base.html
@@ -1170,7 +1170,7 @@
  
            </script> -->
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
 
 document.onselectstart=function(){
 if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
@@ -1191,7 +1191,7 @@ return false;
 }
 };
 }
-</script>
+</script> -->
 
  
        </div>
