--- a/templates/contact.html
+++ b/templates/contact.html
@@ -431,7 +431,7 @@
 			}
 		}
 	</script>
-	<script type="text/javascript">
+	{% comment %} <script type="text/javascript">
 
 		document.onselectstart=function(){
 		if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
@@ -452,7 +452,7 @@
 		}
 		};
 		}
-		</script>
+		</script> {% endcomment %}
 
 
 
