--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -564,7 +564,7 @@ function myFunction() {
         });}
     }
 </script>
-<script type="text/javascript">
+{% comment %} <script type="text/javascript">
 
 	document.onselectstart=function(){
 	if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
@@ -585,5 +585,5 @@ function myFunction() {
 	}
 	};
 	}
-	</script>
+	</script> {% endcomment %}
 </html>
