--- a/templates/contact.html
+++ b/templates/contact.html
@@ -431,7 +431,7 @@
 			}
 		}
 	</script>
-	{% comment %} <script type="text/javascript">
+ <script type="text/javascript">
 
 		document.onselectstart=function(){
 		if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
@@ -452,9 +452,18 @@
 		}
 		};
 		}
-		</script> {% endcomment %}
+		</script> 
 
+		<script>
 
+			$(function() {  
+				$('img').bind('contextmenu', function() {  
+					return false;
+				});
+			});
+			</script>
+
+			
 
 </body>
 
