--- a/templates/teams.html
+++ b/templates/teams.html
@@ -387,7 +387,7 @@
 	}
 	
 	</script>
-	{% comment %} <script type="text/javascript">
+	<script type="text/javascript">
 
 		document.onselectstart=function(){
 		if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
@@ -408,5 +408,13 @@
 		}
 		};
 		}
-		</script> {% endcomment %}
+		</script> 
+		<script>
+
+			$(function() {  
+				$('img').bind('contextmenu', function() {  
+					return false;
+				});
+			});
+			</script>
 </html>
