--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -909,7 +909,7 @@
 
 		}
 	</script>
-	{% comment %} <script type="text/javascript">
+	<script type="text/javascript">
 
 		document.onselectstart=function(){
 		if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
@@ -930,7 +930,15 @@
 		}
 		};
 		}
-		</script> {% endcomment %}
+		</script> 
+		<script>
+
+			$(function() {  
+				$('img').bind('contextmenu', function() {  
+					return false;
+				});
+			});
+			</script>
 	
 
 	
