--- a/templates/base.html
+++ b/templates/base.html
@@ -1194,14 +1194,14 @@ return false;
 };
 }
 </script> 
-<!-- <script>
+<script>
 
 $(function() {  
     $('img').bind('contextmenu', function() {  
         return false;
     });
 });
-</script> -->
+</script>
 
  </div>
    </div>
