--- a/templates/home.html
+++ b/templates/home.html
@@ -300,7 +300,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				
-				<div class="gamePlayer-outer">
+				<div class="gamePlayer-outer remove_saveimage">
 					<!-- <div class="valume_buttn">
 						<div class="sound_on">
 							<i class="fa fa-volume-off" aria-hidden="true"></i>
@@ -327,7 +327,7 @@
 								 <div class="bnnr_img desktop_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
 									{% comment %} src="{% static 'image/game-player.jpg' %}" {% endcomment %}
-									 <img src="{% static 'image/game-player.jpeg' %}" id="play_button" class="desk_poster"/> 
+									 <img src="static/image/game-player.jpeg" id="play_button" class="desk_poster"/> 
 								</div> 
 								<div class="bnnr_img mbl_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
