--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<title>WNDR.com</title>
 	<!-- slick css -->
 
@@ -173,7 +174,7 @@
 	</div>
 	<!---OUR VISION SECTION---->
 	<button onclick="topFunction()" id="myBtntopd" title="Go to top"><i class='fa fa-angle-up'></i></button>
-	<section class="our-vision-content paper-bg">
+	<section class="our-vision-content paper-bg ">
 
 		<div class="container">
 			<div class="row">
@@ -188,9 +189,10 @@
 							FB has changed its name to Meta to reflect the times. All of these developments lead to the
 							ultimate question: Is this Metaverse thing real? </p>
 					</span>
+					
 					<span class="uk-scrollspy-inview tp-txt">
-						<img src="{% static 'image/Slide6.JPG' %}" alt="slide1">
-					</span>
+						<img src="{% static 'image/Slide6.JPG' %} "  alt="slide1">
+			
 					<p> Debate about what, exactly, the Metaverse is or isn’t is outside the scope of this document.
 						However, at a high level, when most people think of the “Metaverse,” they are often thinking
 						about a digital alternative universe populated by human-like avatars. These avatars may be
@@ -207,14 +209,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="vision-line">
+		<div class="vision-line ">
 			<img src="{% static 'img/our-vision-line.png' %}" alt="line">
 		</div>
 	</section>
 	<section class="our-vision-content wndr-bg2">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 paper-vision">
+				<div class="col-lg-12 col-md-12 col-sm-12 paper-vision " >
 					<span>
 						<h3 class="uk-scrollspy-inview tp-txt">WhAt is<span> WNDR?</span></h3>
 						<p class="uk-scrollspy-inview tp-txt">WNDR is a cloud streaming company. WNDR is a game studio
@@ -236,11 +238,11 @@
 							via text message, via placement on any website or social media platform…the WNDR.stream
 							engine powers the delivery to any Internet-connected device with a single click.
 						</p>
-					</span>
-					<span class="uk-scrollspy-inview tp-txt">
+					
+					<span class="uk-scrollspy-inview tp-txt ">
 						<img src="{% static 'image/Slide3.JPG' %}" alt="slide2">
-					</span>
-					<p class="uk-scrollspy-inview">So, while WNDR will produce a library of games and experiences
+					
+					 <p class="uk-scrollspy-inview">So, while WNDR will produce a library of games and experiences
 						in-house, the company’s approach is predicated on a model that has more in common with YouTube
 						than with a traditional game development studio. Not only will the WNDR studio create and
 						deliver its own intellectual property directly to consumers, but it will provide a means of mass
@@ -249,9 +251,9 @@
 						target a dedicated audience of hardcore gamers that are more than willing to spend for both
 						hardware and peripherals, WNDR’s model is a far more democratic one. Simply put, our market is
 						EVERYONE that has access to the Internet and short, engaging entertainment experiences.</p>
-					<span class="uk-scrollspy-inview tp-txt">
+					 <span class="uk-scrollspy-inview tp-txt ">
 						<img src="{% static 'image/Slide2.JPG' %}" alt="slide2">
-					</span>
+					
 					<p class="uk-scrollspy-inview">Today, the accessibility and speed of the Internet is giving us
 						access to the world in seconds. Users are consuming more content and on-the-go. We scroll past
 						IG posts, skip on TIK TOK around new music releases and watch TV clips the same way. WNDR caters
@@ -264,11 +266,13 @@
 						the pop culture punch. Inspired by great storytelling and iconic characters, we deliver familiar
 						models with simple controls. But, we also deliver the high-end graphics and gaming experience
 						that strikes right at the core of what the Premium Casual Gamer wants: instant, high-end fun.
-					</p>
+					</p> 
+				</span>
 				</div>
 			</div>
 		</div>
-		<div class="vision-line">
+		
+		<div class="vision-line ">
 			<img src="{% static 'img/our-vision-line.png' %}" alt="line">
 		</div>
 	</section>
@@ -294,9 +298,13 @@
 						to the creation of a unified, profitable virtual community where we can work, play, relax,
 						transact, socialize, and grow.
 					</p>
+					
 					<span class="uk-scrollspy-inview tp-txt">
-						<img src="{% static 'image/Slide9.JPG' %}" alt="slide3">
+						
+						<img src="{% static 'image/Slide9.JPG' %}"  oncontextmenu="return!1" alt="slide3">
+					
 					</span>
+				
 					<p class="uk-scrollspy-inview tp-txt">There can be little doubt that the opportunity is a
 						significant one: A study by JPMorgan Chase (JPM) found that metaverse "will likely infiltrate
 						every business sector in some way in the coming years, with the market opportunity estimated at
@@ -305,7 +313,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="vision-line">
+		<div class="vision-line ">
 			<img src="{% static 'img/our-vision-line.png' %}" alt="line">
 		</div>
 	</section>
@@ -325,7 +333,7 @@
 					</p>
 					<div class="row wall_streat_mess">
 						<div class="col-md-6 my-auto">
-							<span class="wll-srtr uk-scrollspy-inview">
+							<span class="wll-srtr uk-scrollspy-inview ">
 								<img src="{% static 'image/Slide 14.jpg' %}" alt="slides">
 							</span>
 						</div>
@@ -367,7 +375,7 @@
 					</div>
 
 
-					<div class="vision_video_section" id="video_section_with_image">
+					<div class="vision_video_section remove_saveimage" id="video_section_with_image">
 						<!-- <div class="valume_buttn_vision">
 						<div class="sound_on">
 							<i class="fa fa-volume-up" aria-hidden="true"></i>
@@ -432,7 +440,7 @@
 							traded, and even sold by individuals not connected to the game developers. The possibilities
 							are truly astounding at scale.
 						</p>
-						<span class="wll-srtr uk-scrollspy-inview">
+						<span class="wll-srtr uk-scrollspy-inview ">
 							<img src="{% static 'image/Slide7.JPG' %}" alt="slides">
 						</span>
 						<p>In many ways, Blockchain gaming has already taken the center stage of the gaming world.
@@ -464,7 +472,7 @@
 						<div class="accordig-tearms">
 							<p class="uk-scrollspy-inview">The top five NFT projects in terms of all-time sales
 								according to dappradar.com statistics</p>
-							<span class="wll-srtr uk-scrollspy-inview">
+							<span class="wll-srtr uk-scrollspy-inview ">
 								<img src="{% static 'img/nft-prject.jpg' %}" alt="nft-sales">
 							</span>
 						</div>
@@ -519,7 +527,7 @@
 						MetaMetric Solutions, and the market could soon grow into a trillion-dollar business in the near
 						future
 					</p>
-					<span class="wll-srtr uk-scrollspy-inview"
+					<span class="wll-srtr uk-scrollspy-inview "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 900; repeat: true" style="">
 						<img src="{% static 'image/sLIDE-16-LOFT-(1).jpg' %}" alt="slide-soft">
 					</span>
@@ -546,7 +554,7 @@
 						Colosseum, a virtual museum, a multipurpose concert stadium, a decentralized finance (DeFi)
 						center, a shopping center and even a Casino.
 					</p>
-					<span class="wll-srtr uk-scrollspy-inview"
+					<span class="wll-srtr uk-scrollspy-inview "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 900; repeat: true">
 						<img src="{% static 'image/SLIDE-17-VIRUAL-CONCERT-B -(1).jpg' %}" alt="">
 					</span>
@@ -604,10 +612,10 @@
 						token of WNDR.land and the WNDR.verse more generally. WNDR.coin can be used for all
 						transactions, such as buying an NFT, rarity upgrades, in-game transactions, and marketplace
 						purchases.</p>
-					<span class="uk-scrollspy-inview kind_txt"
+					<span class="uk-scrollspy-inview kind_txt "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 700; repeat: true">
 						<img src="{% static 'image/Slide4.JPG' %}" alt="slides">
-					</span>
+					
 
 					<p class="blck-cntction uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 400; repeat: true">CONCLUSION</p>
@@ -617,10 +625,10 @@
 						engine and supported by blockchain technologies, WNDR will deliver high production value short
 						form content not just for the casual gamer, but for anyone and everyone with an Internet
 						connection and a device of any kind.</p>
-					<span class="uk-scrollspy-inview kind_txt"
+					<span class="uk-scrollspy-inview kind_txt "
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 400; repeat: true">
 						<img src="{% static 'image/Slide5.JPG' %}" alt="slides">
-					</span>
+					
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 400; repeat: true"> As a seamless
 						distribution platform for high end content, WNDR will harness the power of 10 million plus
@@ -641,7 +649,7 @@
 	<!---OUR VISION SECTION-->
 	<!-- footer start here -->
 	<footer>
-		<div class="footer_WNDR">
+		<div class="footer_WNDR  remove_saveimage">
 			<div class="footer-overlap">
 				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
 				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer2">
@@ -931,16 +939,32 @@
 		};
 		}
 		</script> 
-		<script>
 
-			$(function() {  
-				$('img').bind('contextmenu', function() {  
-					return false;
-				});
+	<script>
+		$(document).ready(function() {
+			$('img').bind("contextmenu",function(e) {
+			   return false;
 			});
-			</script>
+		}); 
+	</script>
+
+>
+
+
+	<script>
+		$('.remove_saveimage').bind("contextmenu",function(e){
+			return false;
+		})
+	</script>
 	
 
-	
+	{% comment %} <script>
+		$('body').on('mouseover', "i.mage", function(e)  { 
+			$('img').bind("contextmenu",function(e) {
+				return false;
+			 });
+		   })
 
+	</script> {% endcomment %}
+		
 </html>
