--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -446,7 +446,7 @@
 </div>
 <!-- footer start here -->
 <footer>
-	<div class="footer_WNDR footer-roadmap">
+	<div class="footer_WNDR footer-roadmap remove_saveimage">
 		<div class="footer-overlap">
 			<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
 			<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer2">
@@ -593,5 +593,10 @@ function myFunction() {
 				return false;
 			});
 		});
+		</script>
+		<script>
+			$('.remove_saveimage').bind("contextmenu",function(e){
+				return false;
+			})
 		</script>
 </html>
