--- a/templates/base.html
+++ b/templates/base.html
@@ -1209,11 +1209,64 @@ return false;
         return false;
     })
 </script>
-<!-- // $(function() {  
-    //     $('img').bind('contextmenu', function() {  
-    //         return false;
-    //     });
-    // }); -->
+<script>
+    $('.no-dwonload_section' ).css('background-image',function(){
+
+            $(this).contextmenu(function(){
+                return false;
+                
+            })
+      
+        })
+
+</script>
+
+    <script>
+    $('.about-WNDR').css('background-image',function(){
+
+    $(this).contextmenu(function(){
+     return false;             
+     })
+
+    })
+  </script>
+  
+
+<script>
+    $('.WNDRLAND-WNDR').css('background-image',function(){
+
+    $('.WNDRLAND-WNDR').contextmenu(function(){
+     return false;             
+     })
+
+    })
+  </script>
+  <script>
+    $('#newsletter-outer').css('background-image',function(){
+
+    $('#newsletter-outer').contextmenu(function(){
+    return false;             
+    })
+
+    })
+  </script>
+
+
+
+    <!-- $('.about-WNDR').each(function(){
+    var f =(window.getComputedStyle(this,':before').content)
+    $(f).contextmenu(function(){
+                return false;
+                
+            })
+                
+            }) -->
+
+   
+
+
+
+
 
  </div>
    </div>
