--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -957,6 +957,17 @@
 		})
 	</script>
 	
+		<script>
+			$('.invision-bg').css('background-image',function(){
+		
+				$('.invision-bg').contextmenu(function(){
+				return false;             
+				})
+			
+				})
+		</script>
+
+	
 
 	{% comment %} <script>
 		$('body').on('mouseover', "i.mage", function(e)  { 
