remove subscribe from adminpanel

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,10 @@
    <script src="https://use.fontawesome.com/b197abb434.js"></script>
  
    <script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
+
+
+<!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W5RCLP680E"></script>
  
  
    <!-- fav icon -->
@@ -1251,16 +1255,15 @@ return false;
     })
   </script>
 
+<!-- Google tag (gtag.js) -->
 
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <!-- $('.about-WNDR').each(function(){
-    var f =(window.getComputedStyle(this,':before').content)
-    $(f).contextmenu(function(){
-                return false;
-                
-            })
-                
-            }) -->
+  gtag('config', 'G-W5RCLP680E');
+</script>
 
    
 
