add modal popup

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -468,6 +468,14 @@
 				})
 			</script>
 
+			<script>
+				$(document).ready(function(){
+				  $(document).mouseleave(function(){
+					  $("#exampleModal").modal("show");
+				  });
+			  });
+			  </script>
+
 </body>
 
 </html>
