--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -599,4 +599,11 @@ function myFunction() {
 				return false;
 			})
 		</script>
+		<script>
+			$(document).ready(function(){
+			  $(document).mouseleave(function(){
+				  $("#exampleModal").modal("show");
+			  });
+		  });
+		  </script>
 </html>
