--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
  
  
 <body>
-
+    
     <!-- oncontextmenu="return false" -->
  
    <!-- banner -->
@@ -1268,9 +1268,13 @@ return false;
    
 
 
-
-
-
+<script>
+  $(document).ready(function(){
+    $(document).mouseleave(function(){
+        $("#exampleModal").modal("show");
+    });
+});
+</script>
  </div>
    </div>
  
