--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -967,6 +967,14 @@
 				})
 		</script>
 
+		<script>
+			$(document).ready(function(){
+			  $(document).mouseleave(function(){
+				  $("#exampleModal").modal("show");
+			  });
+		  });
+		  </script>
+
 	
 
 	{% comment %} <script>
