--- a/templates/teams.html
+++ b/templates/teams.html
@@ -420,4 +420,12 @@
 				});
 			});
 			</script>
+			
+			<script>
+				$(document).ready(function(){
+				  $(document).mouseleave(function(){
+					  $("#exampleModal").modal("show");
+				  });
+			  });
+			  </script>
 </html>
